--- a/vignettes/ASCEND_Tutorial.Rmd
+++ b/vignettes/ASCEND_Tutorial.Rmd
@@ -1,12 +1,13 @@
 ---
-title: "An introduction to ASCEND - Analysis of Single Cell Expression, Normalisation and Differential expression"
+title: An introduction to ASCEND - Analysis of Single Cell Expression, Normalisation
+  and Differential expression
 author: "Anne Senabouth"
-date: "`r Sys.Date()`"
-output: pdf_document
-vignette: >
-  %\VignetteIndexEntry{ASCEND Tutorial}
-  %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteEncoding{UTF-8}
+date: '`r Sys.Date()`'
+output:
+  html_document: rmarkdown::html_vignette
+  pdf_document: default
+vignette: |
+  %\VignetteIndexEntry{ASCEND Tutorial} %\VignetteEngine{knitr::rmarkdown} %\VignetteEncoding{UTF-8}
 ---
 
 The `ASCEND` package provides a series of tools for the processing and analysis of single cell RNA-seq (scRNA-seq) in R. These tools perform tasks such as filtering, normalisation, clustering and differential expression.
